--- a/assets/styles/first-slider.css
+++ b/assets/styles/first-slider.css
@@ -3,9 +3,10 @@
 @import url('https://fonts.cdnfonts.com/css/albertus-medium');
 
 .content-slider {
-    background-position: center center;
-     background-size: cover;
-   }
+  background-position: center center;
+  background-size: cover;
+  transition: background-image 1s ease-in-out; 
+}
    .content-slider::before {
      content: "";
      left: 0;
@@ -15,11 +16,9 @@
      height: 100%;
    }
    .slider-container {
-     position: absolute;
      width: 100%;
      height: 100vh;
-     left: 0;
-     top: 0;
+
      background-size: cover;
      background-position: center;
      display: flex;
@@ -53,6 +52,7 @@
      display: flex;
      flex-direction: column;
      gap: 15px;
+     cursor: pointer;
    }
    
    .bullet, .icon {
@@ -99,21 +99,21 @@
      position: relative;
    }
    
-   .content {
-     position: absolute;
-     opacity: 0;
-     visibility: hidden;
-     text-align: left;
-     left: 16%;
-     transition: opacity 1s ease-in-out, visibility 0s 1s;
-     max-width: 60%;
-   }
+  .content {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    text-align: left;
+    left: 16%;
+    transition: opacity 1s ease-in-out, visibility 0s 1s;
+    max-width: 60%;
+}
    
-   .content.active {
-     opacity: 1;
-     visibility: visible;
-     transition: opacity 2s ease-in-out, visibility 0s 0s;
-   }
+.content.active {
+  opacity: 1;
+  visibility: visible;
+  transition: opacity 1s ease-in-out, visibility 0s 0s;
+}
    
    .content .heading {
      color: #fff;
