--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -4,9 +4,13 @@
     align-items: center;
     flex-wrap: wrap; 
     height: 125px;
-    margin-left: 90px;
     padding: 0 50px;
+    padding-left: 140px;
     border-bottom: 1px solid white;
+    position: absolute;
+    z-index: 1;
+    width: calc(100% - 90px);
+    margin-left: 90px;
 }
 
 .nav {
