--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -17,9 +17,9 @@
     --green: #97A52F;
   }
 
-  body {
+body {
     background-color: #EDEDEB;
-  }
+}
 
 .txt {
     color: #545454;
@@ -33,6 +33,7 @@
     font-optical-sizing: auto;
     font-style: normal;
     color: #101010;
+    margin-bottom: 30px;
 }
 
 .btn-dark {
@@ -73,4 +74,16 @@
     border: 1px solid #FFFFFF;
     border-radius: 10px;
     font-weight: 400;
+}
+.mb-5 {
+    margin-bottom: 15px;
+}
+.mb-60 {
+    margin-bottom: 60px;
+}
+.mt-60 {
+    margin-top: 60px;
+}
+img {
+    user-select: none;
 }
