--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -7,7 +7,7 @@
     padding: 0 50px;
     padding-left: 140px;
     border-bottom: 1px solid white;
-    position: absolute;
+    position: fixed;
     z-index: 1;
     width: calc(100% - 90px);
     margin-left: 90px;
@@ -38,7 +38,7 @@
 }
 
 .nav-item a.active {
-    color: #C7C965;
+    color: #97A52F;
 }
 
 .dropdown {
@@ -62,7 +62,7 @@
 .dropdown-item:hover .child-list {
     display: block;
     position: absolute;
-    left: 100%; /* Adjusts position to the right of the parent */
+    left: 100%; 
     top: 0;
 }
 
@@ -127,4 +127,17 @@
     .menu-toggle.open .bar:nth-child(3) {
         transform: rotate(-45deg) translate(5px, -5px);
     }
+}
+
+
+
+.inside-header {
+    background: white;
+}
+
+.inside-header .nav-item a {
+    color: var(--black);
+}
+.inside-header .nav-item a.active {
+    color: #97A52F;
 }
