--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -7,8 +7,12 @@
 }
 
 .about-image {
-    width: 792px;
+    max-width: 792px;
 }
+.about-image img {
+    width: 100%;
+}
+
 .about-content {
     max-width: 460px;
 }
@@ -18,6 +22,10 @@
 }
 .home-about-img {
     position: relative;
+    max-width: 792.33;
+}
+.home-about-img img {
+    width: 100%;
 }
 .home-about-img::after {
     content: "";
@@ -98,4 +106,43 @@
 .swiper-button-prev img {
     width: 30px; 
     height: 30px;
+}
+
+
+/* home-resources */
+.home-resources {
+    display: flex;
+    justify-content: flex-end;
+    position: relative;
+    padding: 100px 0;
+    overflow: hidden;
+}
+
+.home-resources > .about-content {
+    text-align: right;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    text-align: justify;
+    margin-right: 100px;
+}
+.home-resources > .home-about-img  {
+    max-width: 543px;
+    z-index: 2;
+    position: relative;
+}
+.home-resources > .home-about-img img {
+    width: 100%;
+
+}
+
+.home-resources > .home-about-img::after {
+    content: "";
+    position: absolute;
+    top: -40px;
+    left: 300px;
+    width: 366px;
+    height: 366px;
+    border-radius: 50%;
+    z-index: -1;
 }
