--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -87,3 +87,14 @@ body {
 img {
     user-select: none;
 }
+
+
+
+.fade-in {
+    opacity: 0;
+    transition: opacity 1s ease-in-out;
+  }
+  
+  .fade-in.visible {
+    opacity: 1;
+  }
