--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -146,3 +146,9 @@
     border-radius: 50%;
     z-index: -1;
 }
+
+.born-in-georgia {
+    position: absolute;
+    right: 50px;
+    bottom: 60px;
+}
