--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -108,13 +108,7 @@
     transition: opacity 1s ease-in-out, visibility 0s 1s;
     max-width: 60%;
 }
-/*    
-.content.active {
-  opacity: 1;
-  visibility: visible;
-  transition: opacity 1s ease-in-out, visibility 0s 0s;
-}
-    */
+
    .content .heading {
      color: #fff;
      font-family: "Playfair Display", serif;
@@ -129,7 +123,9 @@
     margin: 30px 0;
    }
 
-   .home .heading {
+   
+
+   .home .content-slider .heading {
     color: #fff;
     font-family: "Playfair Display", serif;
     font-weight: 400;
@@ -140,7 +136,7 @@
        1px 1px 0 black;
   }
   
- .home .description {
+ .home .content-slider .description {
    font-size: 19px;
    color: rgb(235, 225, 225);
    font-weight: 400;
