--- a/assets/styles/products.css
+++ b/assets/styles/products.css
@@ -1,66 +1,127 @@
-/* Card Container */
-.card-container {
-    display: grid;
-    grid-template-columns: repeat(4, 1fr); /* 4 columns */
-    gap: 20px;
-    justify-items: center;
-    padding: 20px;
-}
-
-/* Card Style */
-.card {
-    width: 258px;
-    height: 340px;
-    background-color: white;
-    border: 1px solid #ccc;
-    cursor: pointer;
-    display: flex;
-    flex-direction: column;
-}
-
-.card-image {
-    flex: 1;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.card-image img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: contain;
-}
-
-.card .title {
+.product-page .product-page-heading {
     text-align: center;
-    padding: 10px;
+}
+.product-page .product-page-heading h2 {
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+.product-page .product-page-heading h4 {
+    font-size: 20px;
+    font-weight: 300;
+    color: var(--dark-gray);
 }
 
-/* Modal Style */
-.modal {
+.product-page .card-container {
+    display: flex;
+    justify-content: space-evenly;
+    flex-wrap: wrap;
+    gap: 10px;
+    max-width: 1400px;
+    margin: 0 auto;
+    margin-top: 60px;
+}
+.product-page .products .heading {
+    font-size: 18px;
+    margin-bottom: 5px;
+}
+
+.product-page .card {
+    background-color: white;
+    padding: 10px;
+    border-radius: 5px;
+    width: 258px;
+    text-align: center;
+    cursor: pointer;
+    margin: 0px 0px 0px 0px;
+    background-color: #FFFFFF;
+    border-radius: 10px 10px 10px 10px;
+    box-shadow: 0px 0px 50px 11px #e6e6e6;
+}
+.product-page .card img {
+    max-width: 100%;
+    height: auto;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.product-page .popup {
     display: none;
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
 }
 
-.modal-content {
-    background: white;
-    margin: 5% auto;
+.product-page .popup-content {
+    background: rgb(255 252 252 / 80%);
     padding: 20px;
-    width: 80%;
-    max-width: 500px;
+    display: flex;
+    gap: 20px;
+    max-width: 800px;
+    border-radius: 10px;
     position: relative;
+    padding: 50px;
 }
 
-.modal-close {
+.product-page .popup-content .popup-img {
+    min-width: 220px;
+    border-radius: 5px;
+}
+
+.product-page .popup-text {
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: justify;
+}
+
+.product-page .popup-gr {
+    text-align: right;
+}
+
+.product-page .close {
     position: absolute;
-    top: 10px;
-    right: 15px;
-    font-size: 28px;
-    font-weight: bold;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 50%;
+    top: 20px;
+    right: 20px;
     cursor: pointer;
+    background: white;
+    padding: 6px;
+    width: 28px;
+    height: 28px;
+}
+.product-page .close img {
+    width: 16px;
+}
+
+.product-page .product-popup-title {
+    font-size: 22px;
+    margin-bottom: 6px;
+}
+
+.product-page .popup-page-title {
+    font-size: 18px;
+    font-weight: 300;
+    color: var(--dark-gray);
+}
+
+.product-page .popup-gr {
+    font-size: 18px;
+    color: var(--dark-gray);
+    font-weight: 600;
+}
+
+.product-page .product-content-txt {
+    max-width: 902px;
+    text-align: center;
+    margin: 0 auto;
+    margin-top: 60px;
 }
