--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -15,13 +15,14 @@
     --white: #ffffff;
     --black: #101010;
     --green: #97A52F;
+    --dark-gray: #545454;
   }
 
 body {
     background-color: #EDEDEB;
 }
 *::selection {
-    background-color: rgb(86, 86, 86);
+    background: rgba(0, 0, 0, 0.7);  
     color: var(--green);
 }
 button, img, button a {
