--- a/assets/styles/products.css
+++ b/assets/styles/products.css
@@ -125,3 +125,12 @@
     margin: 0 auto;
     margin-top: 60px;
 }
+
+.product-page .product-page-heading.subtitle .heading {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.product-page.main-products .card-container {
+    margin-top: 20px;
+}
