--- a/assets/styles/global.css
+++ b/assets/styles/global.css
@@ -21,6 +21,11 @@
 body {
     background-color: #EDEDEB;
 }
+body.menu-open {
+    background-color: black;
+    overflow: hidden; 
+}
+
 *::selection {
     background: rgba(0, 0, 0, 0.7);  
     color: var(--green);
@@ -110,4 +115,17 @@ img {
   
   .fade-in.visible {
     opacity: 1;
+  }
+
+
+
+
+
+
+  
+  @media (max-width: 1040px) {
+    .btn-dark a, .btn-light a {
+        height: 38px;
+        font-size: 14px;
+    }
   }
