--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -14,7 +14,7 @@
 }
 
 .about-content {
-    max-width: 460px;
+    max-width: 560px;
 }
 .home-about p {
     text-align: justify;
@@ -96,7 +96,7 @@
 }
 
 .swiper-button-next, .swiper-button-prev {
-    color: transparent !important;
+    color: transparent;
 }
 
 .swiper-button-next {
@@ -153,3 +153,21 @@
     right: 50px;
     bottom: 60px;
 }
+
+
+  @media (min-width: 1300px) and (max-width: 1600px) {
+        .about-content {
+        max-width: 440px;
+        }
+  }
+
+  @media (max-width: 1040px) {
+    .born-in-georgia {
+        bottom: 30px;
+        z-index: 4;
+        left: -30px;
+        width: 150px;
+        transform: rotate(-90deg);
+        bottom: 111px;
+    }
+  }
