--- a/assets/styles/products.css
+++ b/assets/styles/products.css
@@ -54,6 +54,7 @@
     background-color: rgba(0, 0, 0, 0.5);
     justify-content: center;
     align-items: center;
+    overflow-y: scroll;
 }
 
 .product-page .popup-content {
@@ -61,6 +62,7 @@
     padding: 20px;
     display: flex;
     gap: 20px;
+    width: 90%;
     max-width: 800px;
     border-radius: 10px;
     position: relative;
@@ -133,4 +135,26 @@
 
 .product-page.main-products .card-container {
     margin-top: 20px;
+}
+
+
+
+@media (max-width: 620px) {
+    .product-page .popup-content {
+        gap: 10px;
+        padding: 10px;
+        flex-direction: column;
+    }
+    .product-page .popup-content .popup-img {
+        min-width: auto;
+        border-radius: 5px;
+        height: 200px;
+        margin: 0 auto;
+    }
+    .product-page .product-popup-title {
+        font-size: 16px;
+    }
+    .product-page .card-container {
+        margin-top: 20px;
+    }
 }
