--- a/assets/styles/export.css
+++ b/assets/styles/export.css
@@ -63,3 +63,33 @@
 .country-chain .circle-1::before {
     background-color: transparent;
 }
+
+
+
+@media only screen and (max-width: 1140px) {
+    .country-chain {
+        max-width: 1000px;
+    }
+}
+
+@media only screen and (max-width: 1140px) {
+    .country-chain {
+        flex-wrap: wrap;
+        width: 100%;
+        justify-content: space-evenly;
+    }
+    .export .content img {
+        max-width: 100%;
+        height: auto;
+        object-fit: contain;
+    }
+    .export  .content {
+        top: 148px;
+    }
+    .country-chain .circle-1::before {
+        display: none;
+    }
+    .country-chain .circle::before {
+        display: none;
+    }
+}
