--- a/assets/styles/footer.css
+++ b/assets/styles/footer.css
@@ -10,7 +10,7 @@
     padding: 40px 10px;
     position: relative;
     z-index: 1; 
-}
+} 
 
 .footer::after {
     content: "";
@@ -56,4 +56,21 @@
     font-family: "Albertus Extra Bold";
     font-size: 16px;
     color: white;
+} 
+
+/* responsive css  */
+
+@media only screen and (max-width: 768px) {
+    .statistic-item h4 {
+        font-size: 22px;
+    }
+    .footer > button {
+        margin: 10px;
+    }
+    .statistic-item  p {
+        font-size: 16px;
+    }
+    .footer-statistics .statistic-wrap {
+        gap: 15px;
+    }
 }
