--- a/assets/styles/home.css
+++ b/assets/styles/home.css
@@ -18,7 +18,6 @@
 }
 .home-about p {
     text-align: justify;
-    text-justify: inter-word;
 }
 .home-about-img {
     position: relative;
@@ -155,11 +154,18 @@
 }
 
 
-  @media (min-width: 1300px) and (max-width: 1600px) {
+  @media (min-width: 1355px) and (max-width: 1600px) {
         .about-content {
-        max-width: 440px;
+            max-width: 440px;
         }
   }
+  @media (max-width: 1354px) {
+    .about-content {
+        width: 100%;
+        max-width: 1000px;
+    }
+}
+
 
   @media (max-width: 1040px) {
     .born-in-georgia {
@@ -169,5 +175,47 @@
         width: 150px;
         transform: rotate(-90deg);
         bottom: 111px;
+    }
+    .about-content {
+        max-width: 100%;
+    }
+    .home-about {
+        padding: 20px;
+    }
+    .home-about-img::after {
+        content: "";
+        position: absolute;
+        top: 18px;
+        right: 200px;
+        background: var(--green);
+        width: 500px;
+        height: 500px;
+        border-radius: 50%;
+        z-index: -1;
+    }
+    .home-product-slider {
+        height: 340px;
+    }
+    .slide-img {
+        width: auto;
+        max-height: 300px;
+    }
+    .home-resources {
+        padding: 20px;
+        padding-top: 40px;
+    }
+    .home-resources > .about-content {
+        margin: 0;
+    }
+    .home-resources > .home-about-img {
+        z-index: 2;
+        top: -20px;
+        max-height: 100px;
+    }
+    .about-content p, .about-content button {
+        z-index: 3;
+    }
+    .home-resources .btn-dark {
+       margin-top: 10px;
     }
   }
