--- a/assets/styles/slider.css
+++ b/assets/styles/slider.css
@@ -17,8 +17,7 @@
    }
    .slider-container {
      width: 100%;
-     height: 100vh;
-
+     height: calc(var(--vh, 1vh) * 100);
      background-size: cover;
      background-position: center;
      display: flex;
