Add css animations

--- a/assets/styles/export.css
+++ b/assets/styles/export.css
@@ -1,5 +1,3 @@
-
-
 .export .content {
     position: relative;
     margin: 0 auto;
@@ -90,6 +88,24 @@
         display: none;
     }
     .country-chain .circle::before {
+        display: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    .country-chain {
+        gap: 4px;
+    }
+    .country-chain h3 {
+        margin: 3px 0;
+    }
+    .export .content {
+        top: 0;
+    }
+   .country-chain .txt {
+        font-size: 12px;
+    }
+    .export .content .social-icons { 
         display: none;
     }
 }
