--- a/assets/styles/header.css
+++ b/assets/styles/header.css
@@ -1,3 +1,41 @@
+/* mobile menu fade in animations  */
+@keyframes menuFadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(-10px); 
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+
+}
+@keyframes menuFadOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(-10px);
+    }
+}
+
+@media (max-width: 1040px) {
+    .nav.active .nav-item {
+        animation: menuFadeIn 0.5s ease forwards;
+        opacity: 0; 
+        transform: 1s;
+    }
+    .nav .nav-item {
+        animation: menuFadeOut 0.5s ease forwards;
+        opacity: 0; 
+        transform: 1s;
+    }
+}
+
+
+
 .navbar {
     display: flex;
     justify-content: space-between;
@@ -230,7 +268,7 @@
     }
 
     .menu-toggle.open .bar:nth-child(3) {
-        transform: rotate(-45deg) translate(7px, -7px);
+        transform: rotate(-45deg) translate(7px, -8px);
     }
     .nav-item .dropdown, .nav-item:hover .dropdown {
         position: relative;
